--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "expo": "~53.0.9",
     "expo-speech": "~13.1.7",
     "expo-status-bar": "~2.2.3",
@@ -21,6 +23,7 @@
     "lottie-react-native": "^7.2.2",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.1",
